[gd_scene load_steps=3 format=3 uid="uid://cquyn05ii5lj5"]

[ext_resource type="Script" path="res://scripts/quests/quest_ui.gd" id="1_f6yj8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfuxf"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="QuestUI" type="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 14.0
offset_bottom = 33.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_f6yj8")

[node name="BorderPanel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfuxf")

[node name="QuestContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="QuestName" type="Label" parent="QuestContainer"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1

[node name="QuestInfo" type="VBoxContainer" parent="QuestContainer"]
visible = false
layout_mode = 2

[connection signal="gui_input" from="QuestContainer/QuestName" to="." method="_on_quest_name_gui_input"]
